objects/Opportunity_Team_Member_History__c.object
<CustomObject>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Tracking_History__c</fullName>
        <label>Opportunity Tracking History</label>
        <referenceTo>Opportunity_Tracking_History__c</referenceTo>
        <relationshipLabel>Opportunity Team Member History</relationshipLabel>
        <relationshipName>Opportunity_Team_Member_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Team Member History</relationshipLabel>
        <relationshipName>Opportunity_Team_Member_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Stage__c</fullName>
        <label>Summary Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Team_Member_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Team Member History</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Opportunity Team Member History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Team Member History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>